--- a/wechat-app/app.json
+++ b/wechat-app/app.json
@@ -10,5 +10,8 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
+  },
+  "networkTimeout": {
+    "request": 10000
   }
 }
