--- a/wechat-service/src/main/resources/application-dev.yml
+++ b/wechat-service/src/main/resources/application-dev.yml
@@ -4,3 +4,6 @@ spring:
     username: ENC(zeIemFUllmqAl7dRk5lm/A==)
     password: ENC(hrTp8hITCP1MLSsw1IeyzKnT6YydVkXG)
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: ENC(127.0.0.1)
+    password: ENC()
