--- a/wechat-service/src/main/resources/application.yml
+++ b/wechat-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 server:
   port: 8088
   servlet:
-    context-path: /recycle-api-web
+    context-path: /ziyuan
   tomcat:
     uri-encoding: UTF-8
 
