--- a/wechat-app/project.config.json
+++ b/wechat-app/project.config.json
@@ -2,14 +2,14 @@
 	"description": "项目配置文件",
 	"packOptions": {
 		"ignore": [
-      {
-        "type": "folder",
-        "value": "test"
-      }
-    ]
+			{
+				"type": "folder",
+				"value": "test"
+			}
+		]
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
