waste详情页开发

--- a/wechat-app/app.json
+++ b/wechat-app/app.json
@@ -4,8 +4,7 @@
     "pages/index/index",
     "pages/cart/cart",
     "pages/my/my",
-    "pages/order/order",
-    "pages/waste/waste"
+    "pages/order/order"
   ],
   "window": {
     "backgroundTextStyle": "dark",
