--- a/wechat-app/app.json
+++ b/wechat-app/app.json
@@ -4,7 +4,8 @@
     "pages/index/index",
     "pages/cart/cart",
     "pages/my/my",
-    "pages/order/order"
+    "pages/order/order",
+    "pages/message/message"
   ],
   "window": {
     "backgroundTextStyle": "dark",
