--- a/wechat-app/app.json
+++ b/wechat-app/app.json
@@ -5,6 +5,11 @@
     "pages/cart/cart",
     "pages/my/my"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
