--- a/wechat-service/src/main/resources/application.yml
+++ b/wechat-service/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     active: dev
   redis:
     port: 6379
+#  # 静态资源路径
+#  resources:
+#    static-locations: classpath:static/,file:static/
 
 server:
   port: 8088
