添加分页配置

--- a/wechat-service/src/main/resources/application.yml
+++ b/wechat-service/src/main/resources/application.yml
@@ -22,6 +22,11 @@ mybatis:
 #    开启驼峰映射
     map-underscore-to-camel-case: true
 
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  pageSizeZero: true
+
 jasypt:
   encryptor:
     password: EbfYkitulv73I2p0mXI50JMCoaxZTPJ7
