--- a/wechat-service/src/main/resources/application-prod.yml
+++ b/wechat-service/src/main/resources/application-prod.yml
@@ -1,5 +1,8 @@
 spring:
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/recycle?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    username: root
+    password: 31501370
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: localhost
