--- a/wechat-service/src/main/resources/application.yml
+++ b/wechat-service/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     active: dev
   redis:
     port: 6379
+  servlet:
+    multipart:
+#      文件上传大小限制
+      max-file-size: 2MB
+      max-request-size: 10MB
 #  # 静态资源路径
 #  resources:
 #    static-locations: classpath:static/,file:static/
